# almirah

./: .buildinfo  .gitignore  CHANGES.rst  CODE_OF_CONDUCT.rst  LICENSE  README.md  changelog.html  code-of-conduct.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorial.html  user-guide.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: documentation.yaml  release.yaml
_modules/: index.html
_modules/almirah/: database.html  dataset.html  db.html  indexer.html  layout.html  specification.html  utils.html
_modules/almirah/core/: db.html  uniquify.html
_modules/almirah/data/: convert.html  indexer.html  layout.html  report.html  specification.html
_modules/almirah/utils/: convert.html  df.html  gen.html  lib.html  logging.html
_sources/: contributing.rst.txt  index.rst.txt  tutorial.rst.txt  user-guide.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/napi/: index.rst.txt
_sources/calmbrains/: setup.rst.txt
_sources/calmbrains/examples/: index.rst.txt
_sources/reference/: almirah.indexer.rst.txt  almirah.layout.rst.txt  almirah.report.rst.txt  almirah.specification.rst.txt  almirah.unique.rst.txt  almirah.utils.rst.txt  dataset.rst.txt  index.rst.txt  indexer.rst.txt  napi.convert.rst.txt  napi.db.rst.txt  napi.indexing.rst.txt  napi.report.rst.txt  napi.specification.rst.txt  utils.rst.txt
_sources/writing-configs/: mapping.rst.txt  rules.rst.txt
adbs/: index.html  setup.html  tutorial.html
adbs/reference/: index.html
almirah/: __init__.py  database.py  dataset.py  db.py  indexer.py  layout.py  specification.py  utils.py
almirah/configs/: bids.yaml
almirah/core/: __init__.py  base.py  db.py  uniquify.py
almirah/data/: convert.py  layout.py  specification.py
almirah/data/configs/: bids.yaml
almirah/utils/: __init__.py  convert.py  df.py  gen.py  lib.py  logging.py  sqlalchemy.py
autoapi/: index.html
autoapi/napi/: index.html
autoapi/napi/data/: index.html
autoapi/napi/db/: index.html
autoapi/napi/utils/: index.html
calmbrains/: index.html  setup.html  tutorial.html
calmbrains/examples/: 1_mean_eeg.html  2_hippo_brain_ratio.html  index.html
calmbrains/reference/: index.html
changelog/: +adbsref.doc.rst  +extratags.bugfix.rst  +gitdocs.bugfix.rst  +hide.feature.rst  +infra.doc.rst  +logo.doc.rst  +logs.feature.rst  +nirsanonymize.bugfix.rst  +nonetag.bugfix.rst  +pad.feature.rst  +random.feature.1.rst  +random.feature.2.rst  +random.feature.3.rst  +random.feature.4.rst  +random.feature.rst  +replace.feature.rst  README.md
configs/specifications/: bids.yaml  derivative.yaml  gids.yaml  sourcedata.yaml
docs/: requirements.txt
docs/source/: conf.py  contributing.rst  index.rst  tutorial.rst  user-guide.rst
docs/source/adbs/: index.rst  (+2 more)
napi/: db.py  utils.py
napi/data/: __init__.py  conv.py  convert.py  dataset.py  db.py  files.py  indexer.py  layout.py  report.py  specification.py  standard.py
reference/: almirah.convert.html  almirah.database.html  almirah.dataset.html  almirah.db.html  almirah.indexer.html  almirah.indexing.html  almirah.layout.html  almirah.report.html  almirah.reporting.html  almirah.specification.html  almirah.unique.html  almirah.utils.html  convert.html  database.html  dataset.html  index.html  indexer.html  layout.html  napi.convert.html  napi.db.html  napi.indexing.html  napi.layout.html  napi.report.html  napi.specification.html  napi.utils.html  reporting.html  specification.html  unique.html  utils.html
tests/: conftest.py  test_standard.py
tests/configs/: rules.yaml  specification.yaml
tests/data/: CHANGES
writing-configs/: index.html  mapping.html  rules.html  specification.html
(+39 files in other folders)
