[tool.poetry]
name = "napi"
version = "0.1.0"
description = "API to access and analyze data stored as structured files."
authors = ["girish <girishmm@ncbs.res.in>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.19"
datalad = "^0.19.3"

[tool.poetry.group.data.dependencies]
mne = "^1.4.2"
nibabel = "^5.1.0"

[tool.poetry.group.mri.dependencies]
dcm2bids = "^3.0.1"
pydeface = "^2.0.2"

[tool.poetry.group.eeg.dependencies]
pybv = "^0.7.5"
mne-bids = "^0.12"
edflib-python = "^1.0.7"

[tool.poetry.group.nirs.dependencies]
mne-nirs = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
furo = "^2023.9.10"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.2"
towncrier = "^23.6.0"

[tool.poetry.group.hacks.dependencies]
seaborn = "^0.12.2"                     # Workaround for mne-nirs till new release
importlib-resources = "<6.0"            # Workaround for towncrier till new release

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
package = "napi"
package_dir = "napi"
directory = "changelog"
filename = "CHANGES.rst"
issue_format = "`#{issue} <https://github.com/girishmm/napi/issues/{issue}>`__"
title_format = "{version} ({project_date})"